fix css for adv toggle covering tabs ship sheet

--- a/StarWars5E/StarWars5E_CSS.css
+++ b/StarWars5E/StarWars5E_CSS.css
@@ -233,24 +233,30 @@ input[type=radio].sheet-tab-button.sheet-core + span
 
 input[type=radio].sheet-tab-button.sheet-ship-core,
 input[type=radio].sheet-tab-button.sheet-ship-core + span {
-    right: 260px;
+    height: 15px;
+    right: 100px;
     width: 80px;
 }
 
 input[type=radio].sheet-tab-button.sheet-ship-cargo,
 input[type=radio].sheet-tab-button.sheet-ship-cargo + span {
-    right: 180px;
+    height: 15px;
+    right: 20px;
     width: 80px;
 }
 
 input[type=radio].sheet-tab-button.sheet-ship-mods,
 input[type=radio].sheet-tab-button.sheet-ship-mods + span {
+    top: 110px;
+    height: 15px;
     right: 100px;
     width: 80px;
 }
 
 input[type=radio].sheet-tab-button.sheet-ship-suites,
 input[type=radio].sheet-tab-button.sheet-ship-suites + span {
+    top: 110px;
+    height: 15px;
     right: 20px;
     width: 80px;
 }
